RESOLVED FIXED184644
[Web Animations] Ensure we never return -0 through the API
https://bugs.webkit.org/show_bug.cgi?id=184644
Summary [Web Animations] Ensure we never return -0 through the API
Antoine Quint
Reported 2018-04-16 00:24:02 PDT
[Web Animations] Ensure we never return -0 through the API
Attachments
Patch (3.89 KB, patch)
2018-04-16 00:25 PDT, Antoine Quint
dino: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews100 for mac-sierra (2.23 MB, application/zip)
2018-04-16 01:31 PDT, EWS Watchlist
no flags
Antoine Quint
Comment 1 2018-04-16 00:25:46 PDT
EWS Watchlist
Comment 2 2018-04-16 01:31:04 PDT
Comment on attachment 337991 [details] Patch Attachment 337991 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/7328720 New failing tests: animations/needs-layout.html
EWS Watchlist
Comment 3 2018-04-16 01:31:06 PDT
Created attachment 337992 [details] Archive of layout-test-results from ews100 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-sierra Platform: Mac OS X 10.12.6
Antoine Quint
Comment 4 2018-04-16 01:47:29 PDT
Radar WebKit Bug Importer
Comment 5 2018-04-16 01:52:10 PDT
Darin Adler
Comment 6 2018-04-16 18:14:03 PDT
Comment on attachment 337991 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=337991&action=review > Source/WebCore/animation/WebAnimationUtilities.h:43 > - return std::round(time.microseconds()) / 1000; > + auto roundedTime = std::round(time.microseconds()) / 1000; > + if (roundedTime == -0) > + return 0; > + return roundedTime; Another way to write it, less straightforward but a little cleaner maybe is to add 0, which turns -0 into +0. return std::round(time.microseconds()) / 1000 + 0; // Add 0 to convert -0 to +0.
Note You need to log in before you can comment on or make changes to this bug.