[Web Animations] Ensure we never return -0 through the API https://bugs.webkit.org/show_bug.cgi?id=184644

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Record one progression in the Web Animations WPT tests.

* web-platform-tests/web-animations/timing-model/animations/updating-the-finished-state-expected.txt:

Source/WebCore:

We could sometimes return -0 instead of 0, which is surprising and leads to an error in WPT tests.
This would happen when playbackRate < 0.

* animation/WebAnimationUtilities.h:
(WebCore::secondsToWebAnimationsAPITime):

Canonical link: https://commits.webkit.org/200165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230667 268f45cc-cd09-0410-ab3c-d52691b4dbfc